tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_integer_cases_with_empty_match/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Missing cases: `i8` is non-empty
  ┌─ src/main.nr:4:19
  │
4 │             match x {}
  │                   - Try adding a match-all pattern: `_`
  │

Aborting due to 1 previous error
